--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
+    { "src": "^/$", "dest": "/index.html" },
     { "src": "/admin", "dest": "/api/index.js" },
     { "src": "/api/admin-login", "dest": "/api/index.js" },
     { "src": "/api/admin-logout", "dest": "/api/index.js" },
